<resources>
    <string name="app_name">Ads Finder</string>
    <string name="Sign_up">sign up free</string>
    <string name="Sign_in">Sign in</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="anonymous">Quick search</string>
    <string name="ForgotPassword">Forgot your password ?</string>
    <string name="CreateAccount">Create account</string>
    <string name="RegistrationFormTitle">Create account</string>
    <string name="SettingLabel">Settings</string>
    <string name="HelpLabel">Help And Feedback</string>
    <string name="LogOutLabel">Log out</string>
    <string name="UsernameLabel">Choose a username </string>
    <string name="PasswordLabel">Pick a password </string>
    <string name="EmailLabel">What\'s your email ?</string>
    <string name="TelephoneLabel">What\'s your phone number ?</string>
    <string name="Already">Already a user ?</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="map_search">Map filter</string>
    <string name="create_new_ad">Create new ad</string>
    <string name="DeleteAd">Delete</string>
    <string name="EditAd">Edit</string>
    <string name="PublierAd">Publish</string>
    <string name="MasquerAd">Hide</string>
    <string name="CreateAccountFormHead">Create account</string>
    <string name="LogInButtonTitle">Log in</string>
    <string name="ProfileTabTitle">My profile</string>
    <string name="SearchTabTitle">Search</string>
    <string name="PersonalAdsTabTitle">My ads</string>
    <string name="MapFilterTabTitle">Map filter</string>
    <string name="CreateNewAd">New Ad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="PasswordResetParagraph">In order to reset your password ,we\' ll send you a confirmation code . pleas enter your email address or phone number associated with your account </string>
    <string name="EmailAndPhoneAssociated"></string>
    <string name="Send">Send</string>
    <string name="KeywordHint">Type a keyword</string>
    <string name="CategoryHint">Choose a category</string>
    <string name="TypeHint">Choose the type of ad</string>
    <string name="Filter">Filter</string>
    <string name="Resend">Resend </string>
    <string name="ConfirmationCodeHint">Enter the 6 digits code</string>
    <string name="Confirm">Confirm</string>
    <string name="NewPasswordHint">Pick a new password </string>
    <string name="NewPasswordConfirmHint">Confirm your new password </string>
    <string name="ResetMyPassword">Reset my password </string>
    <string name="Offer">Offer</string>
    <string name="Demand">Demand</string>
    <string name="Both">Both</string>
    <string name="Slide1_title">Welcome to revilio</string>
    <string name="Slide1_content">The best ads recon ever </string>
    <string name="Slide1">Search and locate ads fast and with ease   </string>
    <string name="Slide2">Contact and bargain</string>
    <string name="Slide3">Join our community , Sign up free and start making ads</string>
    <string name="Slide3_content">Create an account , make and publish your personal ads with ease </string>
    <string name="Slide4_title">Contact and bargain</string>
    <string name="Slide4_content">and much more to be discovered !!</string>
    <string name="SlideNextButton">Next</string>
    <string name="SlideSkipButton">Skip</string>
    <string name="start">Start</string>
    <string name="MyPreference">com.heythem.rahma.ti.2018</string>
    <string name="MyPreferenceKey">reyoga waka teyki okorow</string>
    <string name="LoginFailed">Log in failed ! .. try again</string>
    <string name="LoginSuccess">Login successful</string>
    <string name="Login">Log in</string>
    <string name="CreateAndPublish">Create and publish</string>
    <string name="Cancel">cancel</string>
    <string name="PhotoCapturingLabel">Photo</string>
    <string name="AdPhotosTip">At least one photo is required for the ad</string>
    <string name="Choose_your_location">Specify your location</string>
    <string name="publish_ad">Publish My Ad</string>
    <string name="settings">Settings</string>
    <string name="profile_settings_label">Profile settings</string>
    <string name="application_settings_label">Application settings</string>
    <string name="about_us_label">About us</string>
    <string name="search_label">Search</string>
    <string name="take_photo">Take Photo By Camera</string>
    <string name="load_photo">Load Photo From The Gallery</string>
    <string name="type_of_the_ad">Type of the Ad</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="type">Type :</string>
    <string name="TitleLabel">Choose an appropriate title for your ad :</string>
    <string name="descriptionLabel">Provide a detailed description for your ad :</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="SignUpLabel">don\'t have an account ? Sign up</string>
    <string name="SearchHint">Type a keyword</string>
    <string name="choose_a_category">Select a category :</string>
    <string name="choose_a_sub_category">Choose a sub-category</string>
    <string name="choose_a_sub_categorylabel">Choose a sub-category :</string>
    <string name="choose_a_sub_category2">Select a sub-category :</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="log_out">Log out</string>
    <string name="WrongEmailOrPassword">Wrong email or password</string>
    <string name="first_and_last_name">First And Last name :</string>
    <string name="PhoNum">Phone Number :</string>
    <string name="email_adress_optional">Email Address :</string>
    <string name="first_name">First Name :</string>
    <string name="lastname">Last Name :</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="provide_3_photos_for_your_ad">Provide 3 photos for your ad</string>
    <string name="take_your_time_to_fill_in_all_necessary_informations_for_your_ad">Take your time to fill in all necessary informations for your ad</string>
    <string name="enter_contact_informations_so_people_can_get_in_touch_with_you">Enter contact informations so people can get in touch with you</string>
    <string name="choose_a_method">Choose a method :</string>
    <string name="description">Description</string>
    <string name="no_ads_to_show_hit_that_button_below_and_start_making_some_ads">No ads to show , hit that button below and start making some ads !!</string>
    <string name="your_current_username">Your Current Username</string>
    <string name="enter_a_new_username">Enter a New Username</string>
    <string name="username_must_not_contain_any_special_characters">Username must not contain any special characters</string>
    <string name="edit">edit</string>
    <string name="your_current_email">Your Current Email</string>
    <string name="enter_a_new_email">Enter a New Email</string>
    <string name="not_a_valid_email_address">Not a valid email address</string>
    <string name="you_don_t_be_nameless_right">You don\'t be nameless , right ?</string>
    <string name="ad_deletion_confirmation">Are you sure you want to delete this ad ?</string>
    <string name="Yes">Yes</string>
    <string name="filter">Filter</string>
    <string name="No">No</string>
    <string name="change_account">Change Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="usernae_must_be_at_least_6_characters_long">Usernae must be at least 3 characters long</string>
    <string name="you_must_provide_a_valid_email_address">You must provide a valid email address</string>
    <string name="comments_section">Comments Section</string>
    <string name="revilio">Revilio</string>
    <string name="location_based_ads_finder">Location Based Ads Finder</string>
    <string name="within_the_last">Within The Last :</string>
    <string name="where">Where ?</string>
    <string name="_24_hours">24 hours</string>
    <string name="_7_days">7 days</string>
    <string name="_30_days">30 days</string>
    <string name="around_me_less_than_3_km">Around me ( less than 5 km)</string>
    <string name="in_my_city_less_than_10_km">In my city (less than 15 km)</string>
    <string name="in_my_region_less_than_30_km">In my region (less than 50 km)</string>
    <string name="everywhere">Everywhere</string>
    <string name="let_me_choose">Let me choose</string>
    <string name="what_kind_of_an_ad">What kind of an ad ?</string>
    <string name="gps_service_not_available">(GPS service not available)</string>
    <string name="developped_by">Developped by</string>
    <string name="heythem_boumaza">Heythem Boumaza</string>
    <string name="rahma_guerioun">Rahma Guerioun</string>
    <string name="all_rights_reserved_2017_2018">All Rights Reserved @ 2017-2018</string>
</resources>