<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Home"
        android:icon="@mipmap/home_page"
        android:title="@string/home"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/search"
        android:icon="@mipmap/search"
        android:title="@string/search"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/map_filter"
        android:icon="@mipmap/map_search"
        android:title="@string/map_search"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/Create_ad"
        android:icon="@mipmap/add_new_announce"
        android:title="@string/create_new_ad"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>
