<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlack"
    tools:context="com.firstgpsapp.proudlikeagod.locationbasedadsfinder.PasswordResset">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/PasswordResetParagraph"
      android:textSize="15sp"
      android:gravity="center"
      android:fontFamily="sans-serif-condensed"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="10dp"
      android:textColor="@color/White"
      android:id="@+id/P"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:background="@drawable/registration_fields_style"
      android:layout_below="@+id/P"
      android:layout_marginTop="15dp"
      android:textColor="@color/Black"
      android:id="@+id/ContactCode"/>


  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/SendCode"
      android:textColor="@color/Black"
      android:layout_marginTop="10dp"
      android:layout_below="@id/ContactCode"
      android:layout_centerHorizontal="true"
      android:text="@string/Send"
      android:background="@drawable/log_in_button_custom_states"
      />
  <EditText
      android:layout_centerHorizontal="true"
      android:inputType="numberDecimal"
      android:layout_width="240dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:background="@drawable/registration_fields_style"
      android:layout_below="@+id/SendCode"
      android:layout_marginTop="20dp"
      android:textColor="@color/Black"
      android:id="@+id/CodeField" />
  <LinearLayout
      android:layout_below="@id/CodeField"
      android:layout_centerHorizontal="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
  <TextView
      android:linksClickable="true"
      android:fontFamily="sans-serif-condensed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="20sp"
      android:layout_marginTop="2dp"
      android:layout_below="@id/CodeField"
      android:text="@string/Confirm"
      android:id="@+id/ConfirmView"
      />
  <TextView
      android:fontFamily="sans-serif-condensed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/CodeField"
      android:gravity="center"
      android:textSize="20sp"
      android:id="@+id/ResendView"
      android:layout_marginStart="30dp"
      android:layout_marginTop="2dp"
      android:text="@string/Resend"
      android:layout_toEndOf="@id/ConfirmView"
      />
  </LinearLayout>

  <EditText

      android:layout_width="240dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:background="@drawable/registration_fields_style"
      android:layout_below="@+id/CodeField"
      android:layout_marginTop="50dp"
      android:textColor="@color/Black"
      android:layout_centerHorizontal="true"
      android:id="@+id/NewPasswordField" />
  <TextView
      android:layout_marginTop="5dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_below="@id/NewPasswordField"
      android:text="@string/NewPasswordHint"
      android:layout_marginBottom="10dp"
      android:id="@+id/S"/>
  <EditText
      android:layout_width="240dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_below="@id/S"
      android:background="@drawable/registration_fields_style"
      android:textColor="@color/Black"
      android:layout_centerHorizontal="true"
      android:id="@+id/NewPasswordConfirmField" />
  <TextView
      android:layout_marginTop="10dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/NewPasswordConfirmField"
      android:id="@+id/C"
      android:fontFamily="sans-serif-condensed"
      android:layout_centerHorizontal="true"
      android:text="@string/NewPasswordConfirmHint"/>
  <Button
      android:fontFamily="sans-serif-condensed"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:id="@+id/ResetPassword"
      android:textColor="@color/Black"
      android:layout_marginTop="10dp"
      android:layout_below="@id/C"
      android:layout_centerHorizontal="true"
      android:text="@string/ResetMyPassword"
      android:background="@drawable/log_in_button_custom_states"
      />


</RelativeLayout>
