<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:background="@color/White"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/choose_a_method"
        android:textColor="@color/Purple"
        android:layout_marginStart="20dp"
        android:id="@+id/Choice"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:background="@drawable/photo_pick_button_style"
        android:layout_centerHorizontal="true"
        android:text="@string/take_photo"
        android:textColor="@color/White"
        android:layout_marginStart="20dp"
        android:id="@+id/TakePhoto"
        android:textAllCaps="false"
        android:layout_marginTop="60dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <Button
        android:background="@drawable/photo_pick_button_style"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/TakePhoto"
        android:textColor="@color/White"
        android:layout_marginStart="20dp"
        android:textAllCaps="false"
        android:id="@+id/LoadPhoto"
        android:text="@string/load_photo"
        android:layout_marginBottom="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

</RelativeLayout>